# stites.io

./: .gitignore  .gitlab-ci.yml  .travis.yml  Build.hs  CNAME  LICENSE  Makefile  README.md  README.textile  TODO.md  _config.yml  about.html  about.md  atom.xml  default.nix  feed.xml  index.html  keybase.txt  nixos-18-09.json  pin-nixpkgs.nix  release.nix  reload-browser  shell.nix  site.hs  stack.yaml  stites-io.cabal
.circleci/: config.yml
.well-known/: keybase.txt
_backlog/: 08-16-2016-multi-parameter-type-classes.md  08-17-2016-haskell-rank-n-types.md  08-17-2016-peano-arithmetic.md  08-17-2016-type-families.md  2015-10-06-on-genetic-algorithms.md  2015-10-17-whats-a-function.md  2015-12-06-CSSR-Workflow.md  2015-12-07-contra-co-variants.md  2015-12-15-haskellisms.md  2015-12-16-haskellisms.md  2015-12-17-haskellisms.md  2015-12-18-git-autocompletion.md  2015-12-20-the-magic-phrase-for-beginners-mindset.md  2015-Eclipse Hangs on git status computation  2016-01-04-401-invokes-popup.md  2016-01-04-caching-algorithms.md  2016-01-05-browse-ghci.md  2016-01-05-jwts.md  2016-01-05-pragmas.md  2016-01-08-testing-with-hspec.md  2016-01-13-monoid.md  2016-01-14-things-to-review-after-cssr.md  2016-01-15-monoid-semigroup.md  2016-01-19-assocativity-commutivity.md  2016-01-19-proof-of-addition.md  2016-01-19-vim-to-remember.md  2016-01-20-orphan-instances.md  2016-01-22-applicatives.md  2016-01-24-remember-mappend.md  2016-01-24-typeclasses.md  2016-01-25-monad.md  2016-01-26-monads-are-not.md  2016-01-26-more-monads.md  2016-01-26-spectrums-of-functional-language.md  (+68 more)
(+729 files in other folders)
