name:               stites-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.7.*
                  , blaze-html == 0.8.*
                  , blaze-markup == 0.7.*
                  , clay == 0.10.*
  ghc-options:      -threaded
  default-language: Haskell2010
